// Файл нужен исключительно для добавления данных в MongoDB

package part

import (
	"time"

	"github.com/google/uuid"

	repoModel "github.com/crafty-ezhik/rocket-factory/inventory/internal/repository/model"
	inventoryV1 "github.com/crafty-ezhik/rocket-factory/shared/pkg/proto/inventory/v1"
)

func GetParts() []repoModel.Part {
	parts := []repoModel.Part{
		{
			UUID:          uuid.New(),
			Name:          "Ионный двигатель Orion IX-9",
			Description:   "Высокоточный ионный двигатель для межпланетных перелётов",
			Price:         128500.00,
			StockQuantity: 12,
			Category:      inventoryV1.Category_ENGINE.String(),
			Dimensions: &repoModel.Dimensions{
				Length: 185.0,
				Width:  95.0,
				Height: 75.0,
				Weight: 320.5,
			},
			Manufacturer: &repoModel.Manufacturer{
				Name:    "Aerojet Rocketdyne",
				Country: "USA",
				Website: "https://aerojetrocketdyne.com",
			},
			Tags:      []string{"ion", "deepspace", "thrust"},
			Metadata:  nil,
			CreatedAt: time.Now(),
			UpdatedAt: time.Now(),
		},
		{
			UUID:          uuid.New(),
			Name:          "Жидкостный двигатель RD-180M",
			Description:   "Кислородно-керосиновый двигатель тягою 400 тонн",
			Price:         245000.00,
			StockQuantity: 8,
			Category:      inventoryV1.Category_ENGINE.String(),
			Dimensions: &repoModel.Dimensions{
				Length: 420.0,
				Width:  380.0,
				Height: 350.0,
				Weight: 2150.0,
			},
			Manufacturer: &repoModel.Manufacturer{
				Name:    "NPO Energomash",
				Country: "Russia",
				Website: "https://npoenergomash.ru",
			},
			Tags:      []string{"liquid", "kerosene", "high-thrust"},
			Metadata:  nil,
			CreatedAt: time.Now(),
			UpdatedAt: time.Now(),
		},
		{
			UUID:          uuid.New(),
			Name:          "Криогенный бак LOX/RP-1",
			Description:   "Бак для жидкого кислорода и керосина ёмкостью 10т",
			Price:         89000.00,
			StockQuantity: 16,
			Category:      inventoryV1.Category_FUEL.String(),
			Dimensions: &repoModel.Dimensions{
				Length: 650.0,
				Width:  420.0,
				Height: 380.0,
				Weight: 1250.0,
			},
			Manufacturer: &repoModel.Manufacturer{
				Name:    "CryoTech Industries",
				Country: "USA",
				Website: "https://cryotech.com",
			},
			Tags:      []string{"lox", "rp1", "cryogenic"},
			Metadata:  nil,
			CreatedAt: time.Now(),
			UpdatedAt: time.Now(),
		},
		{
			UUID:          uuid.New(),
			Name:          "Бак для жидкого водорода H2-8000",
			Description:   "Криогенный бак водорода ёмкостью 8000 литров",
			Price:         112500.50,
			StockQuantity: 9,
			Category:      inventoryV1.Category_FUEL.String(),
			Dimensions: &repoModel.Dimensions{
				Length: 580.0,
				Width:  450.0,
				Height: 420.0,
				Weight: 980.0,
			},
			Manufacturer: &repoModel.Manufacturer{
				Name:    "Air Liquide Space",
				Country: "France",
				Website: "https://airliquide.com",
			},
			Tags:      []string{"hydrogen", "cryo", "fuel"},
			Metadata:  nil,
			CreatedAt: time.Now(),
			UpdatedAt: time.Now(),
		},
		{
			UUID:          uuid.New(),
			Name:          "Иллюминатор Quartz-24",
			Description:   "Термостойкий кварцевый иллюминатор 60x60 см",
			Price:         15600.80,
			StockQuantity: 34,
			Category:      inventoryV1.Category_PORTHOLE.String(),
			Dimensions: &repoModel.Dimensions{
				Length: 60.0,
				Width:  60.0,
				Height: 5.2,
				Weight: 45.2,
			},
			Manufacturer: &repoModel.Manufacturer{
				Name:    "Saint-Gobain Space",
				Country: "France",
				Website: "https://saint-gobain.com",
			},
			Tags:      []string{"quartz", "viewport", "thermal"},
			Metadata:  nil,
			CreatedAt: time.Now(),
			UpdatedAt: time.Now(),
		},
		{
			UUID:          uuid.New(),
			Name:          "Панорамный иллюминатор Cupola-7",
			Description:   "Семисекционная панорамная система обзора",
			Price:         342000.00,
			StockQuantity: 3,
			Category:      inventoryV1.Category_PORTHOLE.String(),
			Dimensions: &repoModel.Dimensions{
				Length: 180.0,
				Width:  180.0,
				Height: 35.0,
				Weight: 650.0,
			},
			Manufacturer: &repoModel.Manufacturer{
				Name:    "Thales Alenia Space",
				Country: "Italy",
				Website: "https://thalesaleniaspace.com",
			},
			Tags:      []string{"panoramic", "cupola", "observation"},
			Metadata:  nil,
			CreatedAt: time.Now(),
			UpdatedAt: time.Now(),
		},
		{
			UUID:          uuid.New(),
			Name:          "Планерные крылья Delta-IV",
			Description:   "Углепластиковые планерные поверхности для атмосферного входа",
			Price:         189000.00,
			StockQuantity: 7,
			Category:      inventoryV1.Category_WING.String(),
			Dimensions: &repoModel.Dimensions{
				Length: 1250.0,
				Width:  450.0,
				Height: 25.0,
				Weight: 890.0,
			},
			Manufacturer: &repoModel.Manufacturer{
				Name:    "Boeing Aerospace",
				Country: "USA",
				Website: "https://boeing.com",
			},
			Tags:      []string{"glider", "reentry", "carbon"},
			Metadata:  nil,
			CreatedAt: time.Now(),
			UpdatedAt: time.Now(),
		},
		{
			UUID:          uuid.New(),
			Name:          "Реактивные плоскости RCS-Wing",
			Description:   "Маневровые плоскости с встроенными двигателями RCS",
			Price:         76500.25,
			StockQuantity: 23,
			Category:      inventoryV1.Category_WING.String(),
			Dimensions: &repoModel.Dimensions{
				Length: 320.0,
				Width:  180.0,
				Height: 15.0,
				Weight: 245.0,
			},
			Manufacturer: &repoModel.Manufacturer{
				Name:    "SpaceX Aerodynamics",
				Country: "USA",
				Website: "https://spacex.com",
			},
			Tags:      []string{"rcs", "control", "surface"},
			Metadata:  nil,
			CreatedAt: time.Now(),
			UpdatedAt: time.Now(),
		},
		{
			UUID:          uuid.New(),
			Name:          "Многофункциональный модуль X-42",
			Description:   "Универсальный модуль для грузов/экспериментов",
			Price:         95000.00,
			StockQuantity: 15,
			Category:      inventoryV1.Category_UNKNOWN_UNSPECIFIED.String(),
			Dimensions: &repoModel.Dimensions{
				Length: 250.0,
				Width:  220.0,
				Height: 200.0,
				Weight: 850.0,
			},
			Manufacturer: &repoModel.Manufacturer{
				Name:    "Northrop Grumman",
				Country: "USA",
				Website: "https://northropgrumman.com",
			},
			Tags:      []string{"payload", "multipurpose", "cargo"},
			Metadata:  nil,
			CreatedAt: time.Now(),
			UpdatedAt: time.Now(),
		},
		{
			UUID:          uuid.New(),
			Name:          "Научный контейнер BioLab-5",
			Description:   "Биологическая лаборатория для микрогравитационных экспериментов",
			Price:         124500.30,
			StockQuantity: 11,
			Category:      inventoryV1.Category_UNKNOWN_UNSPECIFIED.String(),
			Dimensions: &repoModel.Dimensions{
				Length: 180.0,
				Width:  150.0,
				Height: 140.0,
				Weight: 420.0,
			},
			Manufacturer: &repoModel.Manufacturer{
				Name:    "ESA Science Division",
				Country: "Germany",
				Website: "https://esa.int",
			},
			Tags:      []string{"biology", "lab", "experiment"},
			Metadata:  nil,
			CreatedAt: time.Now(),
			UpdatedAt: time.Now(),
		},
		{
			UUID:          uuid.New(),
			Name:          "Плазменный двигатель VASIMR VX-200",
			Description:   "Переменная специфическая импульсная магнитная плазма",
			Price:         189750.00,
			StockQuantity: 6,
			Category:      inventoryV1.Category_ENGINE.String(),
			Dimensions: &repoModel.Dimensions{
				Length: 210.0,
				Width:  120.0,
				Height: 95.0,
				Weight: 450.0,
			},
			Manufacturer: &repoModel.Manufacturer{
				Name:    "Ad Astra Rocket",
				Country: "USA",
				Website: "https://adastrarocket.com",
			},
			Tags:      []string{"plasma", "vasimr", "high-isp"},
			Metadata:  nil,
			CreatedAt: time.Now(),
			UpdatedAt: time.Now(),
		},
		{
			UUID:          uuid.New(),
			Name:          "Гибридный двигатель Hybrid-9",
			Description:   "Твёрдотопливный ускоритель с жидкостным зажиганием",
			Price:         156000.00,
			StockQuantity: 14,
			Category:      inventoryV1.Category_ENGINE.String(),
			Dimensions: &repoModel.Dimensions{
				Length: 350.0,
				Width:  280.0,
				Height: 260.0,
				Weight: 1890.0,
			},
			Manufacturer: &repoModel.Manufacturer{
				Name:    "Virgin Orbit",
				Country: "USA",
				Website: "https://virginorbit.com",
			},
			Tags:      []string{"hybrid", "booster", "versatile"},
			Metadata:  nil,
			CreatedAt: time.Now(),
			UpdatedAt: time.Now(),
		},
		{
			UUID:          uuid.New(),
			Name:          "Бак метана CH4-12000",
			Description:   "Криогенный бак сжиженного метана ёмкостью 12т",
			Price:         102500.00,
			StockQuantity: 11,
			Category:      inventoryV1.Category_FUEL.String(),
			Dimensions: &repoModel.Dimensions{
				Length: 720.0,
				Width:  480.0,
				Height: 440.0,
				Weight: 1450.0,
			},
			Manufacturer: &repoModel.Manufacturer{
				Name:    "SpaceX Propulsion",
				Country: "USA",
				Website: "https://spacex.com",
			},
			Tags:      []string{"methane", "cryo", "raptor"},
			Metadata:  nil,
			CreatedAt: time.Now(),
			UpdatedAt: time.Now(),
		},
		{
			UUID:          uuid.New(),
			Name:          "Пероксидный бак H2O2-3000",
			Description:   "Бак высококонцентрированного перекиси водорода 3т",
			Price:         24500.75,
			StockQuantity: 28,
			Category:      inventoryV1.Category_FUEL.String(),
			Dimensions: &repoModel.Dimensions{
				Length: 280.0,
				Width:  220.0,
				Height: 200.0,
				Weight: 350.0,
			},
			Manufacturer: &repoModel.Manufacturer{
				Name:    "Ark Chemicals",
				Country: "Germany",
				Website: "https://arkchemicals.de",
			},
			Tags:      []string{"h2o2", "monopropellant", "rcs"},
			Metadata:  nil,
			CreatedAt: time.Now(),
			UpdatedAt: time.Now(),
		},
		{
			UUID:          uuid.New(),
			Name:          "Иллюминатор Polaris-18",
			Description:   "Усиленный иллюминатор с поляризационным покрытием",
			Price:         9800.50,
			StockQuantity: 52,
			Category:      inventoryV1.Category_PORTHOLE.String(),
			Dimensions: &repoModel.Dimensions{
				Length: 45.0,
				Width:  45.0,
				Height: 4.8,
				Weight: 28.5,
			},
			Manufacturer: &repoModel.Manufacturer{
				Name:    "Corning Aerospace",
				Country: "USA",
				Website: "https://corning.com",
			},
			Tags:      []string{"polarized", "compact", "radiation"},
			Metadata:  nil,
			CreatedAt: time.Now(),
			UpdatedAt: time.Now(),
		},
		{
			UUID:          uuid.New(),
			Name:          "Боковой иллюминатор SideView-6",
			Description:   "Овальный иллюминатор для бокового обзора",
			Price:         12450.00,
			StockQuantity: 41,
			Category:      inventoryV1.Category_PORTHOLE.String(),
			Dimensions: &repoModel.Dimensions{
				Length: 80.0,
				Width:  40.0,
				Height: 6.0,
				Weight: 52.0,
			},
			Manufacturer: &repoModel.Manufacturer{
				Name:    "PPG Aerospace",
				Country: "USA",
				Website: "https://ppgaerospace.com",
			},
			Tags:      []string{"oval", "sideview", "docking"},
			Metadata:  nil,
			CreatedAt: time.Now(),
			UpdatedAt: time.Now(),
		},
		{
			UUID:          uuid.New(),
			Name:          "Солнечные крылья SolarWing-40",
			Description:   "Разворачиваемые солнечные крылья с эффективностью 28%",
			Price:         234000.00,
			StockQuantity: 5,
			Category:      inventoryV1.Category_WING.String(),
			Dimensions: &repoModel.Dimensions{
				Length: 1800.0,
				Width:  900.0,
				Height: 0.2,
				Weight: 120.0,
			},
			Manufacturer: &repoModel.Manufacturer{
				Name:    "Northrop Grumman",
				Country: "USA",
				Website: "https://northropgrumman.com",
			},
			Tags:      []string{"solar", "deployable", "power"},
			Metadata:  nil,
			CreatedAt: time.Now(),
			UpdatedAt: time.Now(),
		},
		{
			UUID:          uuid.New(),
			Name:          "Аэродинамические кили Stabil-12",
			Description:   "Вертикальные стабилизаторы для атмосферного полёта",
			Price:         89000.25,
			StockQuantity: 19,
			Category:      inventoryV1.Category_WING.String(),
			Dimensions: &repoModel.Dimensions{
				Length: 450.0,
				Width:  120.0,
				Height: 8.0,
				Weight: 180.0,
			},
			Manufacturer: &repoModel.Manufacturer{
				Name:    "Lockheed Martin",
				Country: "USA",
				Website: "https://lockheedmartin.com",
			},
			Tags:      []string{"fin", "stabilizer", "aerodynamic"},
			Metadata:  nil,
			CreatedAt: time.Now(),
			UpdatedAt: time.Now(),
		},
		{
			UUID:          uuid.New(),
			Name:          "Грузовой адаптер Payload-8",
			Description:   "Адаптер для крепления спутников и грузов",
			Price:         45600.00,
			StockQuantity: 25,
			Category:      inventoryV1.Category_UNKNOWN_UNSPECIFIED.String(),
			Dimensions: &repoModel.Dimensions{
				Length: 120.0,
				Width:  100.0,
				Height: 95.0,
				Weight: 210.0,
			},
			Manufacturer: &repoModel.Manufacturer{
				Name:    "Moog Space",
				Country: "USA",
				Website: "https://moog.com",
			},
			Tags:      []string{"payload", "adapter", "satellite"},
			Metadata:  nil,
			CreatedAt: time.Now(),
			UpdatedAt: time.Now(),
		},
		{
			UUID:          uuid.New(),
			Name:          "Робот-манипулятор RoboArm-3",
			Description:   "7-осевой манипулятор для EVA и сборки",
			Price:         278000.00,
			StockQuantity: 4,
			Category:      inventoryV1.Category_UNKNOWN_UNSPECIFIED.String(),
			Dimensions: &repoModel.Dimensions{
				Length: 320.0,
				Width:  150.0,
				Height: 140.0,
				Weight: 680.0,
			},
			Manufacturer: &repoModel.Manufacturer{
				Name:    "MacDonald Dettwiler",
				Country: "Canada",
				Website: "https://mda.space",
			},
			Tags:      []string{"robotic", "arm", "eva"},
			Metadata:  nil,
			CreatedAt: time.Now(),
			UpdatedAt: time.Now(),
		},
	}
	return parts
}
